[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["MTJB <markbrown04@googlemail.com>"]
readme = "README.md"
packages = [{include = "python_template"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
